<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('detraccions', function (Blueprint $table) {
            $table->id();
            $table->string('tipo_operacion', 10);
            $table->string('codigo', 10);
            $table->string('descripcion', 150);
            $table->decimal('porcentaje', 5, 2);
            $table->enum('estado', ['Si', 'No'])->default('Si');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('detraccions');
    }
};
